--- a/note/deploy/conda.ipynb
+++ b/note/deploy/conda.ipynb
@@ -111,21 +111,14 @@
      "text": [
       "# conda environments:\n",
       "#\n",
-      "                         /cw/dtaijupiter/NoCsBack/dtai/elia/miniconda\n",
-      "                         /cw/dtaijupiter/NoCsBack/dtai/elia/miniconda/envs/dummynator\n",
-      "                         /cw/dtaijupiter/NoCsBack/dtai/elia/miniconda/envs/mercs\n",
-      "                         /cw/dtaijupiter/NoCsBack/dtai/elia/miniconda/envs/mercs-miss\n",
-      "                         /cw/dtaijupiter/NoCsBack/dtai/elia/miniconda/envs/rwrf\n",
-      "base                  *  /home/elia/miniconda3\n",
-      "PxW                      /home/elia/miniconda3/envs/PxW\n",
-      "aaai20                   /home/elia/miniconda3/envs/aaai20\n",
-      "anomamercs               /home/elia/miniconda3/envs/anomamercs\n",
-      "cython-demo              /home/elia/miniconda3/envs/cython-demo\n",
-      "mercs                    /home/elia/miniconda3/envs/mercs\n",
-      "mercs-miss               /home/elia/miniconda3/envs/mercs-miss\n",
-      "modulo                   /home/elia/miniconda3/envs/modulo\n",
-      "rwrf                     /home/elia/miniconda3/envs/rwrf\n",
-      "synth                    /home/elia/miniconda3/envs/synth\n",
+      "base                  *  /home/zissou/miniconda3\n",
+      "aleph                    /home/zissou/miniconda3/envs/aleph\n",
+      "anomamercs               /home/zissou/miniconda3/envs/anomamercs\n",
+      "mercs-miss               /home/zissou/miniconda3/envs/mercs-miss\n",
+      "pythonweka               /home/zissou/miniconda3/envs/pythonweka\n",
+      "sandboxes                /home/zissou/miniconda3/envs/sandboxes\n",
+      "synth-demo               /home/zissou/miniconda3/envs/synth-demo\n",
+      "testmercspip             /home/zissou/miniconda3/envs/testmercspip\n",
       "\n"
      ]
     }
@@ -151,14 +144,6 @@
      "text": [
       "Collecting package metadata (repodata.json): ...working... done\n",
       "Solving environment: ...working... done\n",
-      "\n",
-      "Downloading and Extracting Packages\n",
-      "pandas-1.0.1         | 8.8 MB    | ########## | 100% \n",
-      "setuptools-45.2.0    | 524 KB    | ########## | 100% \n",
-      "parso-0.6.1          | 69 KB     | ########## | 100% \n",
-      "ncurses-6.2          | 1.1 MB    | ########## | 100% \n",
-      "openssl-1.1.1d       | 2.5 MB    | ########## | 100% \n",
-      "tornado-6.0.3        | 586 KB    | ########## | 100% \n",
       "Preparing transaction: ...working... done\n",
       "Verifying transaction: ...working... done\n",
       "Executing transaction: ...working... done\n",
@@ -170,23 +155,6 @@
       "# To deactivate an active environment, use\n",
       "#\n",
       "#     $ conda deactivate\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "==> WARNING: A newer version of conda exists. <==\n",
-      "  current version: 4.7.12\n",
-      "  latest version: 4.8.2\n",
-      "\n",
-      "Please update conda by running\n",
-      "\n",
-      "    $ conda update -n base -c defaults conda\n",
-      "\n",
       "\n"
      ]
     }
@@ -224,41 +192,32 @@
       "Warning: you have pip-installed dependencies in your environment file, but you do not list pip itself as one of your conda dependencies.  Conda may not use the correct pip to install your packages, and they may end up in the wrong place.  Please add an explicit pip dependency.  I'm adding one for you, but still nagging you.\n",
       "Collecting package metadata (repodata.json): ...working... done\n",
       "Solving environment: ...working... done\n",
-      "\n",
-      "Downloading and Extracting Packages\n",
-      "markdown-3.2.1       | 61 KB     | ########## | 100% \n",
-      "lunr-0.5.6           | 1.0 MB    | ########## | 100% \n",
-      "json5-0.9.1          | 26 KB     | ########## | 100% \n",
-      "mkdocs-1.1           | 5.7 MB    | ########## | 100% \n",
-      "nltk-3.4.5           | 1.7 MB    | ########## | 100% \n",
-      "zipp-2.2.0           | 12 KB     | ########## | 100% \n",
-      "future-0.18.2        | 642 KB    | ########## | 100% \n",
       "Preparing transaction: ...working... done\n",
       "Verifying transaction: ...working... done\n",
       "Executing transaction: ...working... done\n",
       "Ran pip subprocess with arguments:\n",
-      "['/home/elia/miniconda3/envs/affe/bin/python', '-m', 'pip', 'install', '-U', '-r', '/cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt']\n",
+      "['/home/zissou/miniconda3/envs/affe/bin/python', '-m', 'pip', 'install', '-U', '-r', '/home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt']\n",
       "Pip subprocess output:\n",
       "Collecting semantic-version\n",
       "  Using cached semantic_version-2.8.4-py2.py3-none-any.whl (15 kB)\n",
-      "Processing /cw/dtailocal/SymLinks/cache/pip/wheels/86/bd/78/7c623bc57d31eb3f8fc8480c0924e8f09974175f16bb745f7b/mkdocs_minify_plugin-0.2.3-py3-none-any.whl\n",
+      "Processing /home/zissou/.cache/pip/wheels/86/bd/78/7c623bc57d31eb3f8fc8480c0924e8f09974175f16bb745f7b/mkdocs_minify_plugin-0.2.3-py3-none-any.whl\n",
       "Collecting pymdown-extensions\n",
       "  Using cached pymdown_extensions-6.3-py2.py3-none-any.whl (198 kB)\n",
-      "Requirement already satisfied, skipping upgrade: mkdocs>=1.0.4 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (1.1)\n",
-      "Processing /cw/dtailocal/SymLinks/cache/pip/wheels/64/f4/de/9667d84f759289edf5442220997c6d4334637a6bb2a7b90f73/jsmin-2.2.2-cp38-none-any.whl\n",
-      "Processing /cw/dtailocal/SymLinks/cache/pip/wheels/43/07/ac/7c5a9d708d65247ac1f94066cf1db075540b85716c30255459/htmlmin-0.1.12-cp38-none-any.whl\n",
-      "Requirement already satisfied, skipping upgrade: Markdown>=3.2 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from pymdown-extensions->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 3)) (3.2.1)\n",
-      "Requirement already satisfied, skipping upgrade: PyYAML>=3.10 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (5.3)\n",
-      "Requirement already satisfied, skipping upgrade: livereload>=2.5.1 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (2.6.1)\n",
-      "Requirement already satisfied, skipping upgrade: click>=3.3 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (7.0)\n",
-      "Requirement already satisfied, skipping upgrade: tornado>=5.0 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (6.0.3)\n",
-      "Requirement already satisfied, skipping upgrade: Jinja2>=2.10.1 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (2.11.1)\n",
-      "Requirement already satisfied, skipping upgrade: lunr[languages]==0.5.6 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (0.5.6)\n",
-      "Requirement already satisfied, skipping upgrade: setuptools>=36 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from Markdown>=3.2->pymdown-extensions->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 3)) (45.2.0.post20200210)\n",
-      "Requirement already satisfied, skipping upgrade: six in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from livereload>=2.5.1->mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (1.14.0)\n",
-      "Requirement already satisfied, skipping upgrade: MarkupSafe>=0.23 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from Jinja2>=2.10.1->mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (1.1.1)\n",
-      "Requirement already satisfied, skipping upgrade: future>=0.16.0 in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from lunr[languages]==0.5.6->mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (0.18.2)\n",
-      "Requirement already satisfied, skipping upgrade: nltk>=3.2.5; extra == \"languages\" in /cw/dtailocal/SymLinks/miniconda3/envs/affe/lib/python3.8/site-packages (from lunr[languages]==0.5.6->mkdocs>=1.0.4->mkdocs-minify-plugin->-r /cw/dtailocal/repos/affe/condaenv.ohw81ezo.requirements.txt (line 2)) (3.4.5)\n",
+      "Processing /home/zissou/.cache/pip/wheels/65/b7/04/fc4b059d177fd88f3ca362ad372a15e364b0c5433121c7b135/jsmin-2.2.2-py3-none-any.whl\n",
+      "Requirement already satisfied, skipping upgrade: mkdocs>=1.0.4 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (1.1)\n",
+      "Processing /home/zissou/.cache/pip/wheels/23/14/6e/4be5bfeeb027f4939a01764b48edd5996acf574b0913fe5243/htmlmin-0.1.12-py3-none-any.whl\n",
+      "Requirement already satisfied, skipping upgrade: Markdown>=3.2 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from pymdown-extensions->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 3)) (3.2.1)\n",
+      "Requirement already satisfied, skipping upgrade: lunr[languages]==0.5.6 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (0.5.6)\n",
+      "Requirement already satisfied, skipping upgrade: Jinja2>=2.10.1 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (2.11.1)\n",
+      "Requirement already satisfied, skipping upgrade: livereload>=2.5.1 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (2.6.1)\n",
+      "Requirement already satisfied, skipping upgrade: tornado>=5.0 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (6.0.3)\n",
+      "Requirement already satisfied, skipping upgrade: click>=3.3 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (7.0)\n",
+      "Requirement already satisfied, skipping upgrade: PyYAML>=3.10 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (5.3)\n",
+      "Requirement already satisfied, skipping upgrade: setuptools>=36 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from Markdown>=3.2->pymdown-extensions->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 3)) (45.2.0.post20200210)\n",
+      "Requirement already satisfied, skipping upgrade: six>=1.11.0 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from lunr[languages]==0.5.6->mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (1.14.0)\n",
+      "Requirement already satisfied, skipping upgrade: future>=0.16.0 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from lunr[languages]==0.5.6->mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (0.18.2)\n",
+      "Requirement already satisfied, skipping upgrade: nltk>=3.2.5; extra == \"languages\" in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from lunr[languages]==0.5.6->mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (3.4.5)\n",
+      "Requirement already satisfied, skipping upgrade: MarkupSafe>=0.23 in /home/zissou/miniconda3/envs/affe/lib/python3.8/site-packages (from Jinja2>=2.10.1->mkdocs>=1.0.4->mkdocs-minify-plugin->-r /home/zissou/repos/affe/condaenv.nkhayjdn.requirements.txt (line 2)) (1.1.1)\n",
       "Installing collected packages: semantic-version, jsmin, htmlmin, mkdocs-minify-plugin, pymdown-extensions\n",
       "  Attempting uninstall: pymdown-extensions\n",
       "    Found existing installation: pymdown-extensions 6.0\n",
@@ -282,14 +241,22 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "CommandNotFoundError: Your shell has not been properly configured to use 'conda activate'.\n",
+      "To initialize your shell, run\n",
       "\n",
-      "==> WARNING: A newer version of conda exists. <==\n",
-      "  current version: 4.7.12\n",
-      "  latest version: 4.8.2\n",
+      "    $ conda init <SHELL_NAME>\n",
       "\n",
-      "Please update conda by running\n",
+      "Currently supported shells are:\n",
+      "  - bash\n",
+      "  - fish\n",
+      "  - tcsh\n",
+      "  - xonsh\n",
+      "  - zsh\n",
+      "  - powershell\n",
       "\n",
-      "    $ conda update -n base -c defaults conda\n",
+      "See 'conda init --help' for more information and options.\n",
+      "\n",
+      "IMPORTANT: You may need to close and restart your shell after running 'conda init'.\n",
       "\n",
       "\n"
      ]
@@ -329,7 +296,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Installed kernelspec affe in /home/elia/.local/share/jupyter/kernels/affe\n"
+      "Installed kernelspec affe in /home/zissou/.local/share/jupyter/kernels/affe\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CommandNotFoundError: Your shell has not been properly configured to use 'conda activate'.\n",
+      "To initialize your shell, run\n",
+      "\n",
+      "    $ conda init <SHELL_NAME>\n",
+      "\n",
+      "Currently supported shells are:\n",
+      "  - bash\n",
+      "  - fish\n",
+      "  - tcsh\n",
+      "  - xonsh\n",
+      "  - zsh\n",
+      "  - powershell\n",
+      "\n",
+      "See 'conda init --help' for more information and options.\n",
+      "\n",
+      "IMPORTANT: You may need to close and restart your shell after running 'conda init'.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -347,9 +339,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "j-rwrf",
+   "display_name": "aleph",
    "language": "python",
-   "name": "j-rwrf"
+   "name": "aleph"
   },
   "language_info": {
    "codemirror_mode": {
@@ -361,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.1"
   },
   "toc-autonumbering": true
  },
