affe works semi-well

--- a/note/impl/flow.ipynb
+++ b/note/impl/flow.ipynb
@@ -785,7 +785,7 @@
     {
      "data": {
       "text/plain": [
-       "['python',\n",
+       "['/home/zissou/miniconda3/envs/affe/bin/python',\n",
        " '/home/zissou/repos/affe/src/affe/cli/flow_cli.py',\n",
        " '-f',\n",
        " 'yolo.pkl']"
@@ -830,21 +830,82 @@
    "metadata": {
     "Collapsed": "false"
    },
+   "outputs": [],
+   "source": [
+    "f3.run_via_shell_with_log()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/zissou/miniconda3/envs/affe/bin/python /home/zissou/repos/affe/src/affe/cli/flow_cli_with_monitors.py -f yolo.pkl -l /home/zissou/repos/affe/out/flow/logs/logfile-with-script -t 10\n"
+     ]
     }
    ],
    "source": [
-    "f3.run_via_shell()"
+    "c = f3.get_cli_command_with_logs(return_list=False)\n",
+    "print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Done running the general-purpose monitored flow script.\n",
+      "    \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash -s \"$here\" \"$c\"\n",
+    "\n",
+    "$2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:No traceback has been produced, nothing to debug.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
