--- a/note/deploy/conda.ipynb
+++ b/note/deploy/conda.ipynb
@@ -339,9 +339,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aleph",
+   "display_name": "aaai20-frost",
    "language": "python",
-   "name": "aleph"
+   "name": "aaai20-frost"
   },
   "language_info": {
    "codemirror_mode": {
@@ -353,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.6.9"
   },
   "toc-autonumbering": true
  },
