--- a/note/impl/flow.ipynb
+++ b/note/impl/flow.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "true"
+    "Collapsed": "false"
    },
    "source": [
     "# Prelims"
@@ -53,21 +53,12 @@
     "\n",
     "import affe\n",
     "from affe.io import (\n",
-    "    mimic_fs,\n",
-    "    tree_path,\n",
     "    get_root_directory,\n",
     "    get_flow_directory,\n",
-    "    abspath,\n",
-    "    get_children,\n",
-    "    get_children_paths,\n",
-    "    get_subtree,\n",
-    "    rename_directory,\n",
     "    insert_subdirectory,\n",
-    "    get_code_string,\n",
-    "    get_filename,\n",
-    "    get_filepath,\n",
-    "    dump_object,\n",
+    "    abspath,\n",
     "    check_existence_of_directory,\n",
+    "    dump_object,\n",
     ")\n",
     "\n",
     "from affe.utils import flatten_dict, keychain"
@@ -99,7 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "from affe.flow import Flow, load_flow"
+    "from affe.flow import Flow"
    ]
   },
   {
@@ -131,6 +122,7 @@
        " 'out.flow.results': 'out.flow',\n",
        " 'out.flow.timings': 'out.flow',\n",
        " 'out.flow.tmp': 'out.flow',\n",
+       " 'out.flow.flows': 'out.flow',\n",
        " 'out.flow': 'out'}"
       ]
      },
@@ -168,6 +160,7 @@
        "   'out.flow.results': 'out.flow',\n",
        "   'out.flow.timings': 'out.flow',\n",
        "   'out.flow.tmp': 'out.flow',\n",
+       "   'out.flow.flows': 'out.flow',\n",
        "   'out.flow': 'out'}}}"
       ]
      },
@@ -297,7 +290,18 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/zissou/repos/affe/out/flow/logs/logfile'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f.run_with_log()"
    ]
@@ -308,6 +312,28 @@
    "metadata": {
     "Collapsed": "false"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'flowfile.pkl'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.flow_filepath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "f.dump()"
@@ -315,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "Collapsed": "false"
    },
@@ -326,7 +352,7 @@
        "'flowfile.pkl'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,18 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "fl = load_flow(flow_fn)"
+    "fl = Flow.load(flow_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "Collapsed": "false"
    },
@@ -368,7 +394,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,32 +405,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imports succesful\n",
-      "Hello world\n",
-      "2 secs passed\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'/home/zissou/repos/affe/out/flow/logs/logfile'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "fl.run_with_imports()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
    "source": [
     "fl.run_with_log()"
    ]
@@ -431,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -442,22 +458,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/zissou/repos/affe/src/affe/cli/flow_cli.py'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "script = get_flow_cli()\n",
     "script"
@@ -465,44 +470,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../../src/affe/cli/flow_cli.py'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_flow_cli(abs=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'flowfile.pkl'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flow_fn"
    ]
@@ -536,22 +519,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/zissou/repos/affe/note/impl'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -561,26 +533,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/zissou/repos/affe/note/impl\n",
-      "Imports succesful\n",
-      "Hello world\n",
-      "2 secs passed\n",
-      "\n",
-      "    I am running the general-purpose flow script.\n",
-      "    \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash -s \"$here\" \"$script\" \"$flow_fn\"\n",
     "\n",
@@ -612,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -684,41 +641,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/zissou/repos/affe/out/flow/logs/logfile-with-script'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f2.log_filepath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imports succesful.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f2.run_imports()"
    ]
@@ -734,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -745,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -756,68 +694,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imports succesful.\n",
-      "Hello world\n",
-      "2 secs passed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f3.run_with_imports()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/zissou/miniconda3/envs/affe/bin/python',\n",
-       " '/home/zissou/repos/affe/src/affe/cli/flow_cli.py',\n",
-       " '-f',\n",
-       " 'yolo.pkl']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f3.get_cli_command()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/zissou/miniconda3/envs/affe/bin/python'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
@@ -826,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -837,19 +740,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/zissou/miniconda3/envs/affe/bin/python /home/zissou/repos/affe/src/affe/cli/flow_cli_with_monitors.py -f yolo.pkl -l /home/zissou/repos/affe/out/flow/logs/logfile-with-script -t 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = f3.get_cli_command_with_logs(return_list=False)\n",
     "print(c)"
@@ -857,22 +752,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    Done running the general-purpose monitored flow script.\n",
-      "    \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash -s \"$here\" \"$c\"\n",
     "\n",
@@ -881,19 +765,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:No traceback has been produced, nothing to debug.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%debug"
    ]
