--- a/note/impl/template-nb.ipynb
+++ b/note/impl/template-nb.ipynb
@@ -6,9 +6,9 @@
     "Collapsed": "false"
    },
    "source": [
-    "# TITLE\n",
+    "# Composite Executors\n",
     "\n",
-    "Short description of what this notebook is about"
+    "Executors that execute more than one flow."
    ]
   },
   {
@@ -55,6 +55,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "from affe.execs import CompositeExecutor"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
@@ -95,13 +106,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "## Flow\n",
+    "\n",
+    "Just making some easy flows to test my stuff."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def dummy_imports():\n",
+    "    import affe\n",
+    "    from affe.io import (\n",
+    "        mimic_fs,\n",
+    "        tree_path,\n",
+    "        get_root_directory,\n",
+    "        get_flow_directory,\n",
+    "        abspath,\n",
+    "        get_children,\n",
+    "        get_children_paths,\n",
+    "        get_subtree,\n",
+    "        rename_directory,\n",
+    "        insert_subdirectory,\n",
+    "        get_code_string,\n",
+    "        get_filename,\n",
+    "        get_filepath,\n",
+    "        dump_object,\n",
+    "        check_existence_of_directory,\n",
+    "    )\n",
+    "\n",
+    "    from affe.utils import flatten_dict, keychain\n",
+    "\n",
+    "    import time\n",
+    "\n",
+    "    print(\"Imports succesful\")\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "def dummy_flow(config):\n",
+    "    print(\"Hello world\")\n",
+    "\n",
+    "    fs = config.get(\"io\").get(\"fs\")\n",
+    "    results_directory_key = \"out.flow.results\"\n",
+    "\n",
+    "    fn_results = abspath(fs, results_directory_key, filename=\"demo.json\")\n",
+    "\n",
+    "    check_existence_of_directory(fs, results_directory_key)\n",
+    "\n",
+    "    results = dict(elia=\"cool\")\n",
+    "\n",
+    "    dump_object(results, fn_results)\n",
+    "\n",
+    "    sleep_a_few_s = 2\n",
+    "    time.sleep(sleep_a_few_s)\n",
+    "    print(\"{} secs passed\".format(sleep_a_few_s))\n",
+    "\n",
+    "    return True"
+   ]
   }
  ],
  "metadata": {
